# tg-bot-analyst-moderation

./: .coveragerc  .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  env-example  pyproject.toml  requirements.txt
.amazonq/rules/: code-style.md
src/: analytics_scheduler_entrypoint.py  api_entrypoint.py  bot.py  bot_entrypoint.py  config.py  container.py  create_admin.py  create_messages.py  di.py  main.py  requirements.txt  scheduler.py  taskiq_scheduler_entrypoint.py
src/alembic/: env.py
src/api/: main.py
src/callbacks/: __init__.py  all_chats_callback.py  chat_callback.py  user_callback.py
src/commands/: start_commands.py
src/constants/: __init__.py  callback.py  dialogs.py  endpoints.py  enums.py  i18n.py  pagination.py  period.py  promps.py  punishment.py  work_time.py
src/database/: session.py
src/dto/: __init__.py  activity.py  admin_log.py  admin_panel_ban.py  amnesty.py  archive_notification.py  automoderation.py  buffer.py  category_dto.py  chat.py  chat_dto.py  daily_activity.py  membership_event.py  message.py  message_action.py  message_reply.py  moderation.py  punishment.py  reaction.py  release_note.py  report.py  template_dto.py  time_dto.py  user.py  user_tracking.py
src/exceptions/: __init__.py  amnesty.py  base.py  caregory.py  category.py  date.py  moderation.py  user.py
src/filters/: __init__.py  admin_filter.py  archive_filter.py  base_filter.py  group_filter.py  role_filter.py  root_dev_filter.py
src/handlers/: __init__.py  _handler_errors.py
src/mappers/: __init__.py  moderation_mapper.py  punishment_mapper.py
src/middlewares/: __init__.py  admin_antispam.py  album_middleware.py  chat_middleware.py  language_middleware.py  moderator_middleware.py  user_dto_middleware.py
src/models/: __init__.py  admin_action_log.py  admin_chat_access.py  associations.py  base.py  chat_membership_event.py  chat_session.py  chat_settings.py  message.py  message_reply.py  message_templates.py  punishment.py  (+8 more)
tests/: conftest.py
(+777 files in other folders)
